<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">KLauncher</string>
    <string name="action_settings">Settings</string>
	<string name="source">Source</string>
	<string name="application_manager">Application Manager</string>
	<string name="application_center">All Apps</string>
	<string name="brower">Browser</string>
	<string name="calendar">Calendar</string>
	<string name="email">E-mail</string>
	<string name="apkinstall">APK Install</string>
	<string name="multimedia">Multimedia</string>
	<string name="settings">Settings</string>
	<string name="tv">TV player</string>
	<string name="replace">Replace</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="back">Back</string>
	<string name="hint">System Reserve</string>
	<string name="check_update">Check for updates</string>
    <string name="new_version_text">Discovery of new version,Whether to update?</string>
    <string name="skip_this_version">Skip</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="checking_version">Getting the latest version information...</string>
    <string name="latest_version">Your software is the latest version!</string>
    <string name="get_version_failed">Failed to get version information!</string>
    <string name="downloading_package">Downloading the installation package...</string>
    <string name="download_install">Download and install</string>
    <string name="download_failed">Download failed!</string>
      <string-array name="week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
	<string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
		<item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day">
         <item>1st</item>
		 <item>2nd</item>
		 <item>3rd</item>
		 <item>4th</item>
		 <item>5th</item>
		 <item>6th</item>
		 <item>7th</item>
		 <item>8th</item>
		 <item>9th</item>
		 <item>10th</item>
		 <item>11th</item>
		 <item>12th</item>
		 <item>13th</item>
		 <item>14th</item>
		 <item>15th</item>
		 <item>16th</item>
		 <item>17th</item>
		 <item>18th</item>
		 <item>19th</item>
		 <item>20th</item>
		 <item>21st</item>
		 <item>22nd</item>
		 <item>23rd</item>
		 <item>24th</item>
		 <item>25th</item>
		 <item>26th</item>
		 <item>27th</item>
		 <item>28th</item>
		 <item>29th</item>
		 <item>30th</item>
		 <item>31st</item>
	</string-array>
    <string-array name="str_arr_input_source_dtv_vals">
        <item>DTV</item>
        <item>ATV</item>
        <item>AV</item>
        <item>AV2</item>
        <item>AV3</item>
        <item>AV4</item>
        <item>AV5</item>
        <item>AV6</item>
        <item>AV7</item>
        <item>AV8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
	<item>COMPONENT</item>
	<item>COMPONENT2</item>
	<item>COMPONENT3</item>
	<item>COMPONENT_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>VGA</item>
	    <item>DVI</item>
        <item>DVI2</item>
        <item>DVI3</item>
        <item>DVI4</item>
        <item>DVI_MAX</item>
        <item>STORAGE</item>
        <item>KTV</item>
        <item>JPEG</item>
        <item>DTV2</item>
        <item>STORAGE2</item>
        <item>DIV3</item>
        <item>SCALER_OP</item>
        <item>RUV</item>
        <item>VGA2</item>
        <item>VGA3</item>
    </string-array>
    <string-array name="str_arr_input_source_vals">
        <item>DTV</item>
        <item>ATV</item>
        <item>AV</item>
        <item>AV2</item>
        <item>AV3</item>
        <item>AV4</item>
        <item>AV5</item>
        <item>AV6</item>
        <item>AV7</item>
        <item>AV8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
        <item>COMPONENT</item>
        <item>COMPONENT2</item>
        <item>COMPONENT3</item>
        <item>COMPONENT_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>VGA</item>
        <item>DVI</item>
        <item>DVI2</item>
        <item>DVI3</item>
        <item>DVI4</item>
        <item>DVI_MAX</item>
        <item>STORAGE</item>
        <item>KTV</item>
        <item>JPEG</item>
        <item>DTV2</item>
        <item>STORAGE2</item>
        <item>DIV3</item>
        <item>SCALER_OP</item>
        <item>RUV</item>
        <item>VGA2</item>
        <item>VGA3</item>
    </string-array>


    <string-array name="str_arr_input_source_t8c2_hasdvbs_nonci">
        <item>AIR</item>
        <item>CABLE</item>
        <item>AV</item>
        <item>COMPONENT</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>VGA</item>
    </string-array>

    <string-array name="str_arr_input_source_t8c2_hasdvbs_hasci">
        <item>AIR</item>
        <item>CABLE</item>
        <item>AV</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>VGA</item>
    </string-array>

    <string-array name="str_arr_input_source_t8c2_nondvbs_nonci">
        <item>DVB-T</item>
        <item>DVB-C</item>
        <item>ATV</item>
        <item>AV</item>
        <item>COMPONENT</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>VGA</item>
    </string-array>
    <string-array name="str_arr_input_source_t8c2_nondvbs_hasci">
        <item>DVB-T</item>
        <item>DVB-C</item>
        <item>ATV</item>
        <item>AV</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>VGA</item>
    </string-array>


    <string-array name="str_arr_input_source_t5c2_hasdvbs_nonci">
        <item>AIR</item>
        <item>CABLE</item>
        <item>AV</item>
        <item>COMPONENT</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
    </string-array>
    <string-array name="str_arr_input_source_t5c2_hasdvbs_hasci">
        <item>AIR</item>
        <item>CABLE</item>
        <item>AV</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
    </string-array>
    <string-array name="str_arr_input_source_t5c2_nondvbs_nonci">
        <item>DVB-T</item>
        <item>DVB-C</item>
        <item>ATV</item>
        <item>AV</item>
        <item>COMPONENT</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
    </string-array>
    <string-array name="str_arr_input_source_t5c2_nondvbs_hasci">
        <item>DVB-T</item>
        <item>DVB-C</item>
        <item>ATV</item>
        <item>AV</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
    </string-array>
</resources>
