<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
    	android:id="@+id/update_dialog_llChecking"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:gravity="center_vertical">
		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@android:style/Widget.ProgressBar.Inverse"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:textColor="#FFFFFFFF"
			android:textSize="16sp"
			android:text="@string/checking_version"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/update_dialog_llChecked"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:gravity="center_vertical"
	    android:visibility="gone">
		<TextView 
			android:id="@+id/update_dialog_tvMsg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dp"
			android:textColor="#FFFFFFFF"
			android:textSize="16sp"/>
		<Button 
			android:id="@+id/update_dialog_btnProgress"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:enabled="false"
			android:visibility="gone"/>
		<LinearLayout 
			android:id="@+id/update_dialog_llButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone">
			<Button 
				android:id="@+id/update_dialog_btnLeft"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/download_install"
				android:layout_weight="1.0"/>
			<Button 
				android:id="@+id/update_dialog_btnRight"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:layout_weight="1.0"/>
		</LinearLayout>
	</LinearLayout>
</FrameLayout>